--- a/client/src/pages/WorkoutDetails/WorkoutDetailsPage.css
+++ b/client/src/pages/WorkoutDetails/WorkoutDetailsPage.css
@@ -6,4 +6,5 @@
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
+  margin-top: 3rem;
 }
